[gd_scene load_steps=6 format=3 uid="uid://ban22uo6qqx0x"]

[ext_resource type="Script" path="res://bullet.gd" id="1_i0y6s"]
[ext_resource type="Texture2D" uid="uid://bhra1g24r0dld" path="res://imgs/bllt.png" id="1_oht13"]
[ext_resource type="AudioStream" uid="uid://dxcvyens1ll4s" path="res://sounds/enemy_dead.wav" id="3_4qyoh"]
[ext_resource type="Texture2D" uid="uid://cfslxakh7gsdf" path="res://imgs/dmg0.png" id="4_xkyjq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pjr7o"]
size = Vector2(8, 4)

[node name="Bullet" type="Area2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource("1_i0y6s")

[node name="area" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_pjr7o")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_oht13")

[node name="not" type="VisibleOnScreenNotifier2D" parent="."]

[node name="death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_4qyoh")

[node name="smooth" type="CPUParticles2D" parent="."]
emitting = false
amount = 16
emission_shape = 1
emission_sphere_radius = 2.0
gravity = Vector2(-5, 0)
scale_amount_min = 0.5
scale_amount_max = 2.5

[node name="dmg" type="CPUParticles2D" parent="."]
emitting = false
amount = 1
lifetime = 0.5
one_shot = true
texture = ExtResource("4_xkyjq")
emission_shape = 1
emission_sphere_radius = 12.0
direction = Vector2(0, -1)
gravity = Vector2(0, 150)
initial_velocity_min = 15.0
initial_velocity_max = 50.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="not" to="." method="_on_not_screen_exited"]
[connection signal="finished" from="death" to="." method="_on_death_finished"]
